MO2MP-6399 : Fixed spacing issue for longer mail id's in cfp result page speak to advisor flow

--- a/src/_imp.scss
+++ b/src/_imp.scss
@@ -70,6 +70,10 @@
   word-break: break-word;
 }
 
+.break-all {
+  word-break: break-all;
+}
+
 @include allmobiles {
   .sm-text-align-center {
     text-align: center !important;
